Importing Collada DAE from 3DSMax crashes #35014

Closed
opened 2013-04-18 04:25:22 +02:00 by Carlo Andreacchio · 4 comments

%%%--- Operating System, Graphics card ---
Windows 7 x64, gtx580

- Blender version with error, and version that worked ---

Builds provided by blender buildbot
r56100 crashes
r55004 crashes
r54896 works fine
r54853 works fine

- Short description of error ---

Importing of the attached dae crashes blender

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Step 1: Open Blender
Step 2: File > import > collada (.dae)
Step 3: Locate attached file & hit import
Step 4: Crash

%%%

%%%--- Operating System, Graphics card --- Windows 7 x64, gtx580 - Blender version with error, and version that worked --- Builds provided by blender buildbot r56100 crashes r55004 crashes r54896 works fine r54853 works fine - Short description of error --- Importing of the attached dae crashes blender - Steps for others to reproduce the error (preferably based on attached .blend file) --- Step 1: Open Blender Step 2: File > import > collada (.dae) Step 3: Locate attached file & hit import Step 4: Crash %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Gaia, could you please check on this? Thanks!%%%

%%%Gaia, could you please check on this? Thanks!%%%

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35014
No description provided.