Fix #35014: collada import crash with UV coordinates.